Bug 97108 - [IVB / KBL / APL / BYT / BDW] gem_ctx_param invalid-param-set/get fails, no kernel log
Summary: [IVB / KBL / APL / BYT / BDW] gem_ctx_param invalid-param-set/get fails, no k...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-28 12:15 UTC by cprigent
Modified: 2017-07-24 22:40 UTC (History)
1 user (show)

See Also:
i915 platform: BDW, BXT, BYT, IVB, KBL
i915 features: GEM/Other


Attachments
IVB-gem_ctx_param_invalid_param-output (2.45 KB, text/plain)
2016-07-28 12:15 UTC, cprigent
no flags Details
IVB-gem_ctx_param_invalid_param-kern.log (158.26 KB, text/plain)
2016-07-28 12:15 UTC, cprigent
no flags Details
KBLU-gem_ctx_param__invalid_param-output (2.35 KB, text/plain)
2016-08-04 13:32 UTC, cprigent
no flags Details
KBLU-gem_ctx_param__invalid_param-kern.log (153.38 KB, text/plain)
2016-08-04 13:33 UTC, cprigent
no flags Details
APL-gem_ctx_param__invalid_param_set__get-kern.log (315.66 KB, text/plain)
2016-08-12 12:23 UTC, cprigent
no flags Details
APL-gem_ctx_param__invalid_param_set__get-output (2.38 KB, text/plain)
2016-08-12 12:23 UTC, cprigent
no flags Details
HSW__gem_ctx_param__invalid-param-set__get__kern.log (249.99 KB, text/plain)
2016-09-22 12:42 UTC, cprigent
no flags Details
HSW__gem_ctx_param__invalid-param-set__get__output (2.36 KB, text/plain)
2016-09-22 12:43 UTC, cprigent
no flags Details
BDW__gem_ctx_param__invalid_param_set__get__kern.log (268.57 KB, text/plain)
2016-09-29 12:14 UTC, cprigent
no flags Details
BDW__gem_ctx_param__invalid_param_set__get__output (2.36 KB, text/plain)
2016-09-29 12:14 UTC, cprigent
no flags Details

Description cprigent 2016-07-28 12:15:01 UTC
Created attachment 125369 [details]
IVB-gem_ctx_param_invalid_param-output

Platform: IVB
CPU: Intel(R) Core(TM) i7-3770K CPU @ 3.50GHz (family 6, model 58, stepping 9)
Motherboard version: DH77EB
GPU: Intel® HD Graphics 4000 - Xeon E3-1200 v2/3rd Gen Core processor Graphics Controller
Software
Bios: EBH7710H.86A.0096.2012.1012.1645
Linux distribution: Ubuntu 16.04 64 bits
Kernel: 4.7.0-rc7 7eeb04a from http://cgit.freedesktop.org/drm-intel/
  commit 7eeb04a101316645916d4d9df058a9341797f1af
  Author: Chris Wilson <chris@chris-wilson.co.uk>
  Date:   Sun Jul 24 11:00:31 2016 +0100
  drm-intel-nightly: 2016y-07m-24d-09h-59m-54s UTC integration manifest
drm: libdrm-2.4.70 0caa84c from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-11.2.2 3a9f628from git://anongit.freedesktop.org/mesa/mesa
cairo: 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xserver: xorg-server-1.18.0-497 0b2f308 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel: 2.99.917-687 6988b87 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva: libva-1.7.0-26 c36971c from git://git.freedesktop.org/git/vaapi/libva
vaapi-intel-driver: 1.7.0-58 e554446 from git://git.freedesktop.org/git/vaapi/intel-driver
Intel-Gpu-Tools 1.15-140 e3abb20 from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git

Steps:
------
1. Execute tests:
# ./gem_ctx_param --r invalid-param-get
# ./gem_ctx_param --r invalid-param-set

Actual result
-------------
1. Tests are fail
Kernel log shows very few lines

Expected result:
----------------
1. Tests are Pass
Comment 1 cprigent 2016-07-28 12:15:19 UTC
Created attachment 125370 [details]
IVB-gem_ctx_param_invalid_param-kern.log
Comment 2 cprigent 2016-08-04 13:32:49 UTC
Created attachment 125523 [details]
KBLU-gem_ctx_param__invalid_param-output
Comment 3 cprigent 2016-08-04 13:33:56 UTC
Created attachment 125524 [details]
KBLU-gem_ctx_param__invalid_param-kern.log

Same on KBL-U

Platform: KABY LAKE-U
CPU : Intel(R) Core(TM) @ 2.60GHz
MCP : KBL-U G0 2+2
QDF : QYQ8
Chipset PCH: SPT-LP C1
CRB : KABY LAKE U DDR3L RVP7 CRB FAB1

Software
BIOS: 38_07 KBLSE2R1.R00.X038.P07.1606200632 from https://ubit-artifactory-ba.intel.com/artifactory/simple/one-windows-local/Submissions/ifwi/KBL_PURPLE_IFWI_2016_WW26_1_00_HR'16/IFWI-KBL_PURPLE_IFWI_2016_WW26_1_00_HR'16-R.7z
ME FW: 11.5.0.1058
EC FW: 1.19
Ksc (EC FW): 1.20
Linux distribution: Ubuntu 16.04 64 bits
Kernel: 4.7.0 6f87e85 from http://cgit.freedesktop.org/drm-intel/
   commit 6f87e85fa302ffdb4cb9f4cd712691165923c7a2
 Author: Chris Wilson <chris@chris-wilson.co.uk>
  Date:   Mon Aug 1 15:53:41 2016 +0100
  drm-intel-nightly: 2016y-08m-01d-14h-53m-17s UTC integration manifest
drm: libdrm-2.4.70 f19cd3a from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-11.2.2 3a9f628from git://anongit.freedesktop.org/mesa/mesa
cairo: 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xserver: xorg-server-1.18.0-502 c833c08 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel: 2.99.917-688 49daf5d from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva: libva-1.7.0-40 f7e2263 from git://git.freedesktop.org/git/vaapi/libva
vaapi-intel-driver: 1.7.0-64 1cd6795 from git://git.freedesktop.org/git/vaapi/intel-driver
GuC 9.14 from http://rdvivi-hillsboro.jf.intel.com/firmware/kbl_guc_ver9_14.tar.bz2 
DMC 1.01 from: https://01.org/linuxgraphics/downloads/kabylake-dmc-1.01 
Intel-Gpu-Tools 1.15-188 53b4dfd from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git
Comment 4 cprigent 2016-08-12 12:23:22 UTC
Created attachment 125728 [details]
APL-gem_ctx_param__invalid_param_set__get-kern.log
Comment 5 cprigent 2016-08-12 12:23:57 UTC
Created attachment 125729 [details]
APL-gem_ctx_param__invalid_param_set__get-output

APL's logs attached.

Platform: APL system
CPU Name : Intel(R) Genuine Processor @ 1.1 GHz (family: 6, model: 12, stepping: 9) 4 cores
QDF : Q6HE
SoC : B1
CRB : Apollo Lake DDR3L RVP1A FAB2
Reworks: R19, R20

Software 
Bios: 144_B10 APLK_B0_IFWI_X64_R_2016_06_27_0956_SPI_RVP1.bin from \\gar\ec\proj\ba\CCG\APL BIOS\External\BIOS_Release\Daily\v144_10_2016_WW27.1\IFWI\IFWI_RVP1_Release\IFWI
KSC: 1.15
Linux distribution: Ubuntu 16.04 64 bits
Kernel: 4.8.0-rc1 fc1e1be from http://cgit.freedesktop.org/drm-intel/
  commit fc1e1be6fef445e9ea5b99db5fe49bcb49f77eee
  Author: Jani Nikula <jani.nikula@intel.com>
  Date:   Thu Aug 11 01:09:44 2016 +0300
  drm-intel-nightly: 2016y-08m-10d-22h-09m-24s UTC integration manifest
  with patch https://bugs.freedesktop.org/attachment.cgi?id=125686 applied
drm: libdrm-2.4.70 f19cd3a from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-11.2.2 3a9f628from git://anongit.freedesktop.org/mesa/mesa
cairo: 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xserver: xorg-server-1.18.0-502 c833c08 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel: 2.99.917-688 49daf5d from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva: libva-1.7.0-40 f7e2263 from git://git.freedesktop.org/git/vaapi/libva
vaapi-intel-driver: 1.7.0-64 1cd6795 from git://git.freedesktop.org/git/vaapi/intel-driver
GuC 9.14 from http://rdvivi-hillsboro.jf.intel.com/firmware/kbl_guc_ver9_14.tar.bz2 
DMC 1.01 from: https://01.org/linuxgraphics/downloads/kabylake-dmc-1.01 
Intel-Gpu-Tools 1.15 9afd545 from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git
Comment 6 Humberto Israel Perez Rodriguez 2016-08-29 23:43:36 UTC
same issue with the following configuration


Test cases
============================================
gem_ctx_param@invalid-param-get
gem_ctx_param@invalid-param-set

Hardware information
============================================
Platform                        : KBL (RVP7)
Motherboard model               : Kabylake Client platform
Motherboard type                : Skylake U DDR3L RVP7 Laptop
Motherboard manufacturer        : Intel Corporation
CPU information                 : Genuine Intel(R) CPU 0000 @ 2.60GHz
GPU Card                        : Intel Corporation Device 5916 (prog-if 00 [VGA controller])
Memory ram                      : 4 GB
CPU thread                      : 4
CPU core                        : 2

Software information
========================================================
Component         : drm
	tag       : libdrm-2.4.70-2-gb214b05
	commit    : b214b05ccd433c484a6a65e491a1a51b19e4811d 

Component         : cairo
	tag       : 1.15.2
	commit    : db8a7f1697c49ae4942d2aa49eed52dd73dd9c7a 

Component         : intel-gpu-tools
	tag       : intel-gpu-tools-1.15-228-gb0658ce
	commit    : b0658ce76557d4ce00be7252aa60d1b59d8980f6 

Kernel
=============================================
commit f4f46e5544894b2198cdfd5a226ee587d9834cc4
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Mon Aug 29 16:09:42 2016 +0200

    drm-intel-nightly: 2016y-08m-29d-14h-09m-23s UTC integration manifest
Comment 7 cprigent 2016-09-22 12:42:35 UTC
Created attachment 126731 [details]
HSW__gem_ctx_param__invalid-param-set__get__kern.log
Comment 8 cprigent 2016-09-22 12:43:57 UTC
Created attachment 126732 [details]
HSW__gem_ctx_param__invalid-param-set__get__output

HSW logs attached

Platform: Dell Inc. OptiPlex 9020
CPU: Intel(R) Core(TM) i7-4770 CPU @ 3.40GHz (Family 6, Model 60, Stepping 3)
Motherboard: 0DNKMN
GPU: Intel® HD Graphics 4600 / Xeon E3-1200 v3/4th Gen Core Processor Integrated Graphics Controller

Software
Bios: A07
Linux distribution: Ubuntu 16.04 64 bits
Kernel: 4.8.0-rc7 0e34cb5 from http://cgit.freedesktop.org/drm-intel/
commit 0e34cb5b35f0f837219495c402073141481b1b90
  Author: Jani Nikula <jani.nikula@intel.com>
  Date:   Mon Sep 19 18:39:27 2016 +0300
  drm-intel-nightly: 2016y-09m-19d-15h-38m-53s UTC integration manifest
libdrm-2.4.70-14 0659558 from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-12.0.0 8b06176 from git://anongit.freedesktop.org/mesa/mesa
cairo 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xorg-server-1.18.99-2 3ef51c5 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel 2.99.917-703 15c5ff1 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva-1.7.0-50 7aa2dd9 from git://git.freedesktop.org/git/vaapi/libva 
vaapi-intel-driver: 1.7.0-136 36fbd81 from git://git.freedesktop.org/git/vaapi/intel-driver
IGT: intel-gpu-tools-1.16-22 200237a from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git

External screen: DELL E1912Hf
Comment 9 cprigent 2016-09-29 12:14:40 UTC
Created attachment 126852 [details]
BDW__gem_ctx_param__invalid_param_set__get__kern.log

BDW logs attached

Platform: NUC5i7RYB
CPU: Intel(R) Core(TM) i7-5557U CPU @ 3.10GHz (Family 6, Model 61, Stepping 4)
Motherboard version: H73774-102
GPU: Intel® Iris™ Graphics 6100 - Intel Corporation Broadwell-U Integrated Graphics (rev 09)
Memory: two 4GB card Kingston 99U5469-045.A00LF
SSD: INTEL SSDSC2KW24

Software
Bios: RYBDWi35.86A.0358.2016.0606.1423 from https://downloadcenter.intel.com/downloads/eula/26081/BIOS-Update-RYBDWi35-86A-?httpDown=https%3A%2F%2Fdownloadmirror.intel.com%2F26081%2Feng%2FRY0358.bio
Linux distribution: Ubuntu 16.04 64 bits
Kernel: 4.8.0-rc8 aab15c2 from http://cgit.freedesktop.org/drm-intel/
   commit aab15c274da587bcab19376d2caa9d6626440335
   Author: Jani Nikula <jani.nikula@intel.com>
   Date:   Mon Sep 26 15:11:53 2016 +0300
   drm-intel-nightly: 2016y-09m-26d-12h-11m-33s UTC integration manifest
libdrm-2.4.70-14 0659558 from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-12.0.0 8b06176 from git://anongit.freedesktop.org/mesa/mesa
cairo 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xorg-server-1.18.99.901-14 ba199cb from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel 2.99.917-708 8f33f80 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva-1.7.2-38 3b7e499 from git://git.freedesktop.org/git/vaapi/libva 
vaapi-intel-driver: 1.7.2-101 302cf63 from git://git.freedesktop.org/git/vaapi/intel-driver
IGT: intel-gpu-tools-1.16-30 32b2021 from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git
Comment 10 cprigent 2016-09-29 12:14:54 UTC
Created attachment 126853 [details]
BDW__gem_ctx_param__invalid_param_set__get__output
Comment 11 Luis Botello 2016-10-13 21:19:16 UTC
Issue still present over APL with the following config:

Software Config:
=====================================================
Kernel:
commit f35ed31aea66b3230c366fcba5f3456ae2cb956e
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Mon Oct 10 14:29:09 2016 +0300
    drm-intel-nightly: 2016y-10m-10d-11h-28m-51s UTC integration manifest

drm:
  tag: libdrm-2.4.71
  commit: a44c9c31b7b38b3eedf3d26648f9e68dcc377c4c
mesa:
  tag: mesa-12.0.0
  commit: 8b06176f310f65628ce136b90a99005278ba5e0d
cairo:
  tag: 1.15.2
  commit: db8a7f1697c49ae4942d2aa49eed52dd73dd9c7a
xorg-server-macros:
  tag: util-macros-1.19.0-2-gd7acec2
  commit: d7acec2d3a3abe79814ceb72e2c0d4d95ed31d37
xserver:
  tag: xorg-server-1.18.99.901-76-g97a8353
  commit: 97a8353ec1192d8d3bd2ebb99e5687cb91427e09
xf86-video-intel:
  tag: 2.99.917-712-g696f58f
  commit: 696f58f69f2bac5717d19f7a1a2278fee50a083e
libva:
  tag: libva-1.7.2-38-g3b7e499
  commit: 3b7e4999950a04fabd42edbead8c2f24c6cdf3cf
vaapi-intel-driver:
  tag: 1.7.2-133-gdd73514
  commit: dd73514209d7942f2d8c8b0bbb541fe6884ea1bc

Hardware Config:
========================================================
Platform                        : BXT-P
Motherboard model               : Broxton P
Motherboard type                : NOTEBOOK Hand Held
Motherboard manufacturer        : Intel Corp.
CPU family                      : Other
CPU information                 : 06/5c
GPU Card                        : Intel Corporation Device 5a84 (rev 0a) (prog-if 00 [VGA controller])
Comment 12 Chris Wilson 2016-10-13 21:48:14 UTC
commit 171b21d9f761da5865f66cb55cbb5eb875a41b92
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Oct 13 22:46:47 2016 +0100

    igt/gem_ctx_param: Update invalid parma number


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.