lib/ioctl_wrappers.h
@@ -119,6 +119,7 @@ struct local_i915_gem_context_param {
 #define LOCAL_CONTEXT_PARAM_BAN_PERIOD	0x1
 #define LOCAL_CONTEXT_PARAM_NO_ZEROMAP	0x2
 #define LOCAL_CONTEXT_PARAM_GTT_SIZE	0x3
+#define LOCAL_CONTEXT_PARAM_NO_ERROR_CAPTURE	0x4
 	uint64_t value;
 };
 void gem_context_require_ban_period(int fd);
